pkt-vertx-api-service/target/classes/META-INF/fabric8/openshift/catalog-service-deploymentconfig.yml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/vertx.svg
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=catalog-service&var-version=1.0.0-SNAPSHOT
  labels:
    app: catalog-service
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: com.redhat.coolstore
  name: catalog-service
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: catalog-service
    provider: fabric8
    group: com.redhat.coolstore
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/iconUrl: img/icons/vertx.svg
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=catalog-service&var-version=1.0.0-SNAPSHOT
      labels:
        app: catalog-service
        provider: fabric8
        version: 1.0.0-SNAPSHOT
        group: com.redhat.coolstore
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: catalog-service:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /health/liveness
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: vertx
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/readiness
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - vertx
      from:
        kind: ImageStreamTag
        name: catalog-service:latest
    type: ImageChange
