pkt-vertx-api-service/target/classes/META-INF/fabric8/openshift/catalog-service-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: catalog-service
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: com.redhat.coolstore
  name: catalog-service
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: catalog-service
